[project]
name = "klima"
version = "0.1.0"
description = "A terminal based weather app without the bloat of modern web apps."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
    "textual>=6.11.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "textual-dev>=1.8.0",
]

[tool.ruff]
line-length = 100
python-version = "3.14"
